# mac_forensics-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/mac_forensics_mcp/: __init__.py  config.py  server.py
src/mac_forensics_mcp/correlation/: __init__.py  event_investigator.py  timeline_builder.py
src/mac_forensics_mcp/parsers/: __init__.py  fsck_apfs_parser.py  fsevents_parser.py  plist_parser.py  spotlight_parser.py  sqlite_parser.py  unified_log_parser.py  xattr_parser.py
src/mac_forensics_mcp/schemas/: __init__.py
src/mac_forensics_mcp/utils/: __init__.py  discovery.py  timestamps.py
